// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect base demo works fine 1`] = `
<base>
  <t-tree-select
    options="{{
      Array [
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "0-0",
            },
            Object {
              "label": "选项二",
              "value": "0-1",
            },
            Object {
              "label": "选项三",
              "value": "0-2",
            },
            Object {
              "label": "选项四",
              "value": "0-3",
            },
            Object {
              "label": "选项五",
              "value": "0-4",
            },
            Object {
              "label": "选项六",
              "value": "0-5",
            },
            Object {
              "label": "选项七",
              "value": "0-6",
            },
            Object {
              "label": "选项八",
              "value": "0-7",
            },
            Object {
              "label": "选项九",
              "value": "0-8",
            },
            Object {
              "label": "选项十",
              "value": "0-9",
            },
          ],
          "label": "选项一",
          "value": "0",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "1-0",
            },
            Object {
              "label": "选项二",
              "value": "1-1",
            },
            Object {
              "label": "选项三",
              "value": "1-2",
            },
            Object {
              "label": "选项四",
              "value": "1-3",
            },
            Object {
              "label": "选项五",
              "value": "1-4",
            },
            Object {
              "label": "选项六",
              "value": "1-5",
            },
            Object {
              "label": "选项七",
              "value": "1-6",
            },
            Object {
              "label": "选项八",
              "value": "1-7",
            },
            Object {
              "label": "选项九",
              "value": "1-8",
            },
            Object {
              "label": "选项十",
              "value": "1-9",
            },
          ],
          "label": "选项二",
          "value": "1",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "2-0",
            },
            Object {
              "label": "选项二",
              "value": "2-1",
            },
            Object {
              "label": "选项三",
              "value": "2-2",
            },
            Object {
              "label": "选项四",
              "value": "2-3",
            },
            Object {
              "label": "选项五",
              "value": "2-4",
            },
            Object {
              "label": "选项六",
              "value": "2-5",
            },
            Object {
              "label": "选项七",
              "value": "2-6",
            },
            Object {
              "label": "选项八",
              "value": "2-7",
            },
            Object {
              "label": "选项九",
              "value": "2-8",
            },
            Object {
              "label": "选项十",
              "value": "2-9",
            },
          ],
          "label": "选项三",
          "value": "2",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "3-0",
            },
            Object {
              "label": "选项二",
              "value": "3-1",
            },
            Object {
              "label": "选项三",
              "value": "3-2",
            },
            Object {
              "label": "选项四",
              "value": "3-3",
            },
            Object {
              "label": "选项五",
              "value": "3-4",
            },
            Object {
              "label": "选项六",
              "value": "3-5",
            },
            Object {
              "label": "选项七",
              "value": "3-6",
            },
            Object {
              "label": "选项八",
              "value": "3-7",
            },
            Object {
              "label": "选项九",
              "value": "3-8",
            },
            Object {
              "label": "选项十",
              "value": "3-9",
            },
          ],
          "label": "选项四",
          "value": "3",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "4-0",
            },
            Object {
              "label": "选项二",
              "value": "4-1",
            },
            Object {
              "label": "选项三",
              "value": "4-2",
            },
            Object {
              "label": "选项四",
              "value": "4-3",
            },
            Object {
              "label": "选项五",
              "value": "4-4",
            },
            Object {
              "label": "选项六",
              "value": "4-5",
            },
            Object {
              "label": "选项七",
              "value": "4-6",
            },
            Object {
              "label": "选项八",
              "value": "4-7",
            },
            Object {
              "label": "选项九",
              "value": "4-8",
            },
            Object {
              "label": "选项十",
              "value": "4-9",
            },
          ],
          "label": "选项五",
          "value": "4",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "5-0",
            },
            Object {
              "label": "选项二",
              "value": "5-1",
            },
            Object {
              "label": "选项三",
              "value": "5-2",
            },
            Object {
              "label": "选项四",
              "value": "5-3",
            },
            Object {
              "label": "选项五",
              "value": "5-4",
            },
            Object {
              "label": "选项六",
              "value": "5-5",
            },
            Object {
              "label": "选项七",
              "value": "5-6",
            },
            Object {
              "label": "选项八",
              "value": "5-7",
            },
            Object {
              "label": "选项九",
              "value": "5-8",
            },
            Object {
              "label": "选项十",
              "value": "5-9",
            },
          ],
          "label": "选项六",
          "value": "5",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "6-0",
            },
            Object {
              "label": "选项二",
              "value": "6-1",
            },
            Object {
              "label": "选项三",
              "value": "6-2",
            },
            Object {
              "label": "选项四",
              "value": "6-3",
            },
            Object {
              "label": "选项五",
              "value": "6-4",
            },
            Object {
              "label": "选项六",
              "value": "6-5",
            },
            Object {
              "label": "选项七",
              "value": "6-6",
            },
            Object {
              "label": "选项八",
              "value": "6-7",
            },
            Object {
              "label": "选项九",
              "value": "6-8",
            },
            Object {
              "label": "选项十",
              "value": "6-9",
            },
          ],
          "label": "选项七",
          "value": "6",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "7-0",
            },
            Object {
              "label": "选项二",
              "value": "7-1",
            },
            Object {
              "label": "选项三",
              "value": "7-2",
            },
            Object {
              "label": "选项四",
              "value": "7-3",
            },
            Object {
              "label": "选项五",
              "value": "7-4",
            },
            Object {
              "label": "选项六",
              "value": "7-5",
            },
            Object {
              "label": "选项七",
              "value": "7-6",
            },
            Object {
              "label": "选项八",
              "value": "7-7",
            },
            Object {
              "label": "选项九",
              "value": "7-8",
            },
            Object {
              "label": "选项十",
              "value": "7-9",
            },
          ],
          "label": "选项八",
          "value": "7",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "8-0",
            },
            Object {
              "label": "选项二",
              "value": "8-1",
            },
            Object {
              "label": "选项三",
              "value": "8-2",
            },
            Object {
              "label": "选项四",
              "value": "8-3",
            },
            Object {
              "label": "选项五",
              "value": "8-4",
            },
            Object {
              "label": "选项六",
              "value": "8-5",
            },
            Object {
              "label": "选项七",
              "value": "8-6",
            },
            Object {
              "label": "选项八",
              "value": "8-7",
            },
            Object {
              "label": "选项九",
              "value": "8-8",
            },
            Object {
              "label": "选项十",
              "value": "8-9",
            },
          ],
          "label": "选项九",
          "value": "8",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "9-0",
            },
            Object {
              "label": "选项二",
              "value": "9-1",
            },
            Object {
              "label": "选项三",
              "value": "9-2",
            },
            Object {
              "label": "选项四",
              "value": "9-3",
            },
            Object {
              "label": "选项五",
              "value": "9-4",
            },
            Object {
              "label": "选项六",
              "value": "9-5",
            },
            Object {
              "label": "选项七",
              "value": "9-6",
            },
            Object {
              "label": "选项八",
              "value": "9-7",
            },
            Object {
              "label": "选项九",
              "value": "9-8",
            },
            Object {
              "label": "选项十",
              "value": "9-9",
            },
          ],
          "label": "选项十",
          "value": "9",
        },
      ]
    }}"
    value="{{
      Array [
        "0",
        "0-0",
      ]
    }}"
    bind:change="onChange"
  />
</base>
`;

exports[`TreeSelect TreeSelect multiple demo works fine 1`] = `
<multiple>
  <t-tree-select
    multiple="{{true}}"
    options="{{
      Array [
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "0-0",
            },
            Object {
              "label": "选项二",
              "value": "0-1",
            },
            Object {
              "label": "选项三",
              "value": "0-2",
            },
            Object {
              "label": "选项四",
              "value": "0-3",
            },
            Object {
              "label": "选项五",
              "value": "0-4",
            },
            Object {
              "label": "选项六",
              "value": "0-5",
            },
            Object {
              "label": "选项七",
              "value": "0-6",
            },
            Object {
              "label": "选项八",
              "value": "0-7",
            },
            Object {
              "label": "选项九",
              "value": "0-8",
            },
            Object {
              "label": "选项十",
              "value": "0-9",
            },
          ],
          "label": "选项一",
          "value": "0",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "1-0",
            },
            Object {
              "label": "选项二",
              "value": "1-1",
            },
            Object {
              "label": "选项三",
              "value": "1-2",
            },
            Object {
              "label": "选项四",
              "value": "1-3",
            },
            Object {
              "label": "选项五",
              "value": "1-4",
            },
            Object {
              "label": "选项六",
              "value": "1-5",
            },
            Object {
              "label": "选项七",
              "value": "1-6",
            },
            Object {
              "label": "选项八",
              "value": "1-7",
            },
            Object {
              "label": "选项九",
              "value": "1-8",
            },
            Object {
              "label": "选项十",
              "value": "1-9",
            },
          ],
          "label": "选项二",
          "value": "1",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "2-0",
            },
            Object {
              "label": "选项二",
              "value": "2-1",
            },
            Object {
              "label": "选项三",
              "value": "2-2",
            },
            Object {
              "label": "选项四",
              "value": "2-3",
            },
            Object {
              "label": "选项五",
              "value": "2-4",
            },
            Object {
              "label": "选项六",
              "value": "2-5",
            },
            Object {
              "label": "选项七",
              "value": "2-6",
            },
            Object {
              "label": "选项八",
              "value": "2-7",
            },
            Object {
              "label": "选项九",
              "value": "2-8",
            },
            Object {
              "label": "选项十",
              "value": "2-9",
            },
          ],
          "label": "选项三",
          "value": "2",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "3-0",
            },
            Object {
              "label": "选项二",
              "value": "3-1",
            },
            Object {
              "label": "选项三",
              "value": "3-2",
            },
            Object {
              "label": "选项四",
              "value": "3-3",
            },
            Object {
              "label": "选项五",
              "value": "3-4",
            },
            Object {
              "label": "选项六",
              "value": "3-5",
            },
            Object {
              "label": "选项七",
              "value": "3-6",
            },
            Object {
              "label": "选项八",
              "value": "3-7",
            },
            Object {
              "label": "选项九",
              "value": "3-8",
            },
            Object {
              "label": "选项十",
              "value": "3-9",
            },
          ],
          "label": "选项四",
          "value": "3",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "4-0",
            },
            Object {
              "label": "选项二",
              "value": "4-1",
            },
            Object {
              "label": "选项三",
              "value": "4-2",
            },
            Object {
              "label": "选项四",
              "value": "4-3",
            },
            Object {
              "label": "选项五",
              "value": "4-4",
            },
            Object {
              "label": "选项六",
              "value": "4-5",
            },
            Object {
              "label": "选项七",
              "value": "4-6",
            },
            Object {
              "label": "选项八",
              "value": "4-7",
            },
            Object {
              "label": "选项九",
              "value": "4-8",
            },
            Object {
              "label": "选项十",
              "value": "4-9",
            },
          ],
          "label": "选项五",
          "value": "4",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "5-0",
            },
            Object {
              "label": "选项二",
              "value": "5-1",
            },
            Object {
              "label": "选项三",
              "value": "5-2",
            },
            Object {
              "label": "选项四",
              "value": "5-3",
            },
            Object {
              "label": "选项五",
              "value": "5-4",
            },
            Object {
              "label": "选项六",
              "value": "5-5",
            },
            Object {
              "label": "选项七",
              "value": "5-6",
            },
            Object {
              "label": "选项八",
              "value": "5-7",
            },
            Object {
              "label": "选项九",
              "value": "5-8",
            },
            Object {
              "label": "选项十",
              "value": "5-9",
            },
          ],
          "label": "选项六",
          "value": "5",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "6-0",
            },
            Object {
              "label": "选项二",
              "value": "6-1",
            },
            Object {
              "label": "选项三",
              "value": "6-2",
            },
            Object {
              "label": "选项四",
              "value": "6-3",
            },
            Object {
              "label": "选项五",
              "value": "6-4",
            },
            Object {
              "label": "选项六",
              "value": "6-5",
            },
            Object {
              "label": "选项七",
              "value": "6-6",
            },
            Object {
              "label": "选项八",
              "value": "6-7",
            },
            Object {
              "label": "选项九",
              "value": "6-8",
            },
            Object {
              "label": "选项十",
              "value": "6-9",
            },
          ],
          "label": "选项七",
          "value": "6",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "7-0",
            },
            Object {
              "label": "选项二",
              "value": "7-1",
            },
            Object {
              "label": "选项三",
              "value": "7-2",
            },
            Object {
              "label": "选项四",
              "value": "7-3",
            },
            Object {
              "label": "选项五",
              "value": "7-4",
            },
            Object {
              "label": "选项六",
              "value": "7-5",
            },
            Object {
              "label": "选项七",
              "value": "7-6",
            },
            Object {
              "label": "选项八",
              "value": "7-7",
            },
            Object {
              "label": "选项九",
              "value": "7-8",
            },
            Object {
              "label": "选项十",
              "value": "7-9",
            },
          ],
          "label": "选项八",
          "value": "7",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "8-0",
            },
            Object {
              "label": "选项二",
              "value": "8-1",
            },
            Object {
              "label": "选项三",
              "value": "8-2",
            },
            Object {
              "label": "选项四",
              "value": "8-3",
            },
            Object {
              "label": "选项五",
              "value": "8-4",
            },
            Object {
              "label": "选项六",
              "value": "8-5",
            },
            Object {
              "label": "选项七",
              "value": "8-6",
            },
            Object {
              "label": "选项八",
              "value": "8-7",
            },
            Object {
              "label": "选项九",
              "value": "8-8",
            },
            Object {
              "label": "选项十",
              "value": "8-9",
            },
          ],
          "label": "选项九",
          "value": "8",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "9-0",
            },
            Object {
              "label": "选项二",
              "value": "9-1",
            },
            Object {
              "label": "选项三",
              "value": "9-2",
            },
            Object {
              "label": "选项四",
              "value": "9-3",
            },
            Object {
              "label": "选项五",
              "value": "9-4",
            },
            Object {
              "label": "选项六",
              "value": "9-5",
            },
            Object {
              "label": "选项七",
              "value": "9-6",
            },
            Object {
              "label": "选项八",
              "value": "9-7",
            },
            Object {
              "label": "选项九",
              "value": "9-8",
            },
            Object {
              "label": "选项十",
              "value": "9-9",
            },
          ],
          "label": "选项十",
          "value": "9",
        },
      ]
    }}"
    value="{{
      Array [
        "0",
        Array [
          "0-0",
          "0-1",
        ],
      ]
    }}"
    bind:change="onChange"
  />
</multiple>
`;

exports[`TreeSelect TreeSelect normal demo works fine 1`] = `
<normal>
  <t-tree-select
    options="{{
      Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "label": "东城区",
                  "value": "110101",
                },
                Object {
                  "label": "西城区",
                  "value": "110102",
                },
                Object {
                  "label": "朝阳区",
                  "value": "110105",
                },
                Object {
                  "label": "丰台区",
                  "value": "110106",
                },
                Object {
                  "label": "石景山区",
                  "value": "110107",
                },
                Object {
                  "label": "海淀区",
                  "value": "110108",
                },
                Object {
                  "label": "门头沟区",
                  "value": "110109",
                },
                Object {
                  "label": "房山区",
                  "value": "110111",
                },
                Object {
                  "label": "通州区",
                  "value": "110112",
                },
                Object {
                  "label": "顺义区",
                  "value": "110113",
                },
                Object {
                  "label": "昌平区",
                  "value": "110114",
                },
                Object {
                  "label": "大兴区",
                  "value": "110115",
                },
                Object {
                  "label": "怀柔区",
                  "value": "110116",
                },
                Object {
                  "label": "平谷区",
                  "value": "110117",
                },
                Object {
                  "label": "密云区",
                  "value": "110118",
                },
                Object {
                  "label": "延庆区",
                  "value": "110119",
                },
              ],
              "label": "北京市",
              "value": "110100",
            },
          ],
          "label": "北京市",
          "value": "110000",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "label": "荔湾区",
                  "value": "440103",
                },
                Object {
                  "label": "越秀区",
                  "value": "440104",
                },
                Object {
                  "label": "海珠区",
                  "value": "440105",
                },
                Object {
                  "label": "天河区",
                  "value": "440106",
                },
                Object {
                  "label": "白云区",
                  "value": "440111",
                },
                Object {
                  "label": "黄埔区",
                  "value": "440112",
                },
                Object {
                  "label": "番禺区",
                  "value": "440113",
                },
                Object {
                  "label": "花都区",
                  "value": "440114",
                },
                Object {
                  "label": "南沙区",
                  "value": "440115",
                },
                Object {
                  "label": "从化区",
                  "value": "440117",
                },
                Object {
                  "label": "增城区",
                  "value": "440118",
                },
              ],
              "label": "广州市",
              "value": "440100",
            },
            Object {
              "children": Array [
                Object {
                  "label": "武江区",
                  "value": "440203",
                },
                Object {
                  "label": "浈江区",
                  "value": "440204",
                },
                Object {
                  "label": "曲江区",
                  "value": "440205",
                },
                Object {
                  "label": "始兴县",
                  "value": "440222",
                },
                Object {
                  "label": "仁化县",
                  "value": "440224",
                },
                Object {
                  "label": "翁源县",
                  "value": "440229",
                },
                Object {
                  "label": "乳源瑶族自治县",
                  "value": "440232",
                },
                Object {
                  "label": "新丰县",
                  "value": "440233",
                },
                Object {
                  "label": "乐昌市",
                  "value": "440281",
                },
                Object {
                  "label": "南雄市",
                  "value": "440282",
                },
              ],
              "label": "韶关市",
              "value": "440200",
            },
            Object {
              "children": Array [
                Object {
                  "label": "罗湖区",
                  "value": "440303",
                },
                Object {
                  "label": "福田区",
                  "value": "440304",
                },
                Object {
                  "label": "南山区",
                  "value": "440305",
                },
                Object {
                  "label": "宝安区",
                  "value": "440306",
                },
                Object {
                  "label": "龙岗区",
                  "value": "440307",
                },
                Object {
                  "label": "盐田区",
                  "value": "440308",
                },
                Object {
                  "label": "龙华区",
                  "value": "440309",
                },
                Object {
                  "label": "坪山区",
                  "value": "440310",
                },
                Object {
                  "label": "光明区",
                  "value": "440311",
                },
              ],
              "label": "深圳市",
              "value": "440300",
            },
            Object {
              "children": Array [
                Object {
                  "label": "香洲区",
                  "value": "440402",
                },
                Object {
                  "label": "斗门区",
                  "value": "440403",
                },
                Object {
                  "label": "金湾区",
                  "value": "440404",
                },
              ],
              "label": "珠海市",
              "value": "440400",
            },
            Object {
              "children": Array [
                Object {
                  "label": "龙湖区",
                  "value": "440507",
                },
                Object {
                  "label": "金平区",
                  "value": "440511",
                },
                Object {
                  "label": "濠江区",
                  "value": "440512",
                },
                Object {
                  "label": "潮阳区",
                  "value": "440513",
                },
                Object {
                  "label": "潮南区",
                  "value": "440514",
                },
                Object {
                  "label": "澄海区",
                  "value": "440515",
                },
                Object {
                  "label": "南澳县",
                  "value": "440523",
                },
              ],
              "label": "汕头市",
              "value": "440500",
            },
            Object {
              "children": Array [
                Object {
                  "label": "禅城区",
                  "value": "440604",
                },
                Object {
                  "label": "南海区",
                  "value": "440605",
                },
                Object {
                  "label": "顺德区",
                  "value": "440606",
                },
                Object {
                  "label": "三水区",
                  "value": "440607",
                },
                Object {
                  "label": "高明区",
                  "value": "440608",
                },
              ],
              "label": "佛山市",
              "value": "440600",
            },
          ],
          "label": "广东省",
          "value": "440000",
        },
      ]
    }}"
    value="{{
      Array [
        "110000",
        "110100",
        "110101",
      ]
    }}"
    bind:change="onChange"
  />
</normal>
`;
